--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<main>
 		<div class="page-l">
 			<h3 class="center ttl">「おかん」のぬくもりで一人暮らしを快適に</h3>
-			<p>ひとりぐらし快適サービス「クラウドおかん」は一人暮らしをしている方々の生活を快適で楽しいものとするために、地域の「おかん」達に家事を頼めるサービスです。</p>
+			<p>おひとり様快適サービス「クラウドおかん」は一人暮らしをしている方々の生活を快適で楽しいものとするために、地域の「おかん」達に家事を頼めるサービスです。</p>
 			<h3 class="center ttl">スマフォから気軽に「おかん」</h3>
 			<p>専用スマフォアプリから気軽におかん達に家事を頼めます。</p>
 		</div>
@@ -43,6 +43,7 @@
 				<li><a class="white-text" href="#">ホーム</a></li>
 				<li><a class="white-text" href="#">クラウドおかんとは？</a></li>
 				<li><a class="white-text" href="#">おかんを探す</a></li>
+				<li><a class="white-text" href="#">家事を頼む</a></li>
 				<li><a class="white-text" href="#">家事相談</a></li>
 			</ul>
 		</div>
