--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="nav-wrapper page-l clearfix">
 			<ul id="nav-mobile" class="left global-nav-item clearfix">
 				<li><a href="#">クラウドおかんとは？</a></li>
-				<li><a href="#">おかんを探す</a></li>
+				<li><a href="find-okan.html">おかんを探す</a></li>
 				<li><a href="#">家事を頼む</a></li>
 				<li><a href="#">家事相談</a></li>
 			</ul>
