--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header class="deep-orange lighten-2">
 		<div class="main-visual page-l">
-			<h1 class="brand-logo"><a href="index.html"><img src="imgs/logo1.png" alt="ひとりぐらし快適サービス　クラウドおかん"></a></h1>
+			<h1 class="brand-logo"><a href="index.html"><img src="imgs/logo1.png" alt="おひとり様快適サービス　クラウドおかん"></a></h1>
 			<div class="balloon amber darken-1 white-text z-depth-2">
 					今日は疲れてご飯作りたくないって？<br>
 					わかったわ「おかん」がつくったげる！
