--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
 			<p>おひとり様快適サービス「クラウドおかん」は一人暮らしをしている方々の生活を快適で楽しいものとするために、地域の「おかん」達に家事を頼めるサービスです。</p>
 			<h3 class="center ttl">スマフォから気軽に「おかん」</h3>
 			<p>専用スマフォアプリから気軽におかん達に家事を頼めます。</p>
+			<h4 class="center">DOWNLOAD</h4>
+			<div class="row">
+				<div class="col s12">
+					<div class="center-block cneter-link">
+						<div class="waves-effect waves-light btn-large center-block"><a class="white-text" href="#">iPhone</a></div>
+						<div class="waves-effect waves-light btn-large center-block right"><a class="white-text" href="#">andoroid</a></div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</main>
 	<footer class="page-footer deep-orange lighten-2">
