--- a/order.html
+++ b/order.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>おかんを探す：クラウドおかん</title>
+	<title>家事を頼む：クラウドおかん</title>
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.1/css/materialize.min.css' />
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -25,11 +25,8 @@
 	</nav>
 	<main>
 		<div class="page-l">
-			<h1>おかんを探す</h1>
-			<h3 class="center ttl">「おかん」のぬくもりで一人暮らしを快適に</h3>
-			<p>おひとり様快適サービス「クラウドおかん」は一人暮らしをしている方々の生活を快適で楽しいものとするために、地域の「おかん」達に家事を頼めるサービスです。</p>
-			<h3 class="center ttl">スマフォから気軽に「おかん」</h3>
-			<p>専用スマフォアプリから気軽におかん達に家事を頼めます。</p>
+			<h1>家事を頼む</h1>
+			<p></p>
 		</div>
 	</main>
 	<footer class="page-footer deep-orange lighten-2">
