--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<ul id="nav-mobile" class="left global-nav-item clearfix">
 				<li><a href="#">クラウドおかんとは？</a></li>
 				<li><a href="find-okan.html">おかんを探す</a></li>
-				<li><a href="#">家事を頼む</a></li>
+				<li><a href="order.html">家事を頼む</a></li>
 				<li><a href="#">家事相談</a></li>
 			</ul>
 		</div>
@@ -52,7 +52,7 @@
 				<li><a class="white-text" href="#">ホーム</a></li>
 				<li><a class="white-text" href="#">クラウドおかんとは？</a></li>
 				<li><a class="white-text" href="find-okan.html">おかんを探す</a></li>
-				<li><a class="white-text" href="#">家事を頼む</a></li>
+				<li><a class="white-text" href="order.html">家事を頼む</a></li>
 				<li><a class="white-text" href="#">家事相談</a></li>
 			</ul>
 		</div>
