--- a/order.html
+++ b/order.html
@@ -26,7 +26,47 @@
 	<main>
 		<div class="page-l">
 			<h1>家事を頼む</h1>
-			<p></p>
+			<p>このページからおかんに各種家事を頼めます。スマフォアプリを使えばさらに便利に！</p>
+			<h3>食事を頼む</h3>
+			<h4>時間</h4>
+			<form action="">
+				<textarea name="" id="" cols="30" rows="10"></textarea>
+			</form>
+			<h4>メニュー</h4>
+			<form action="">
+				<textarea name="" id="" cols="30" rows="10"></textarea>
+			</form>
+			<input class="waves-effect waves-light btn-large" type="submit" value="送信">
+			<h3>掃除を頼む</h3>
+			<h4>時間</h4>
+			<form action="">
+				<textarea name="" id="" cols="30" rows="10"></textarea>
+			</form>
+			<h4>掃除する場所</h4>
+			<form action="">
+				<textarea name="" id="" cols="30" rows="10"></textarea>
+			</form>
+			<input class="waves-effect waves-light btn-large" type="submit" value="送信">
+			<h3>洗濯を頼む</h3>
+			<h4>時間</h4>
+			<form action="">
+				<textarea name="" id="" cols="30" rows="10"></textarea>
+			</form>
+			<h4>量＆内容</h4>
+			<form action="">
+				<textarea name="" id="" cols="30" rows="10"></textarea>
+			</form>
+			<input class="waves-effect waves-light btn-large" type="submit" value="送信">
+			<h3>その他</h3>
+			<h4>時間</h4>
+			<form action="">
+				<textarea name="" id="" cols="30" rows="10"></textarea>
+			</form>
+			<h4>内容</h4>
+			<form action="">
+				<textarea name="" id="" cols="30" rows="10"></textarea>
+			</form>
+			<input class="waves-effect waves-light btn-large" type="submit" value="送信">
 		</div>
 	</main>
 	<footer class="page-footer deep-orange lighten-2">
