--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<li><a class="white-text" href="#">ホーム</a></li>
 				<li><a class="white-text" href="#">クラウドおかんとは？</a></li>
 				<li><a class="white-text" href="find-okan.html">おかんを探す</a></li>
-				<li><a class="white-text" href="order.html">家事を頼む</a></li>
+				<li><a class="white-text" href="">家事を頼む</a></li>
 				<li><a class="white-text" href="#">家事相談</a></li>
 			</ul>
 		</div>
