color fix and other

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 			<div class="row">
 				<div class="col s12">
 					<div class="center-block cneter-link">
-						<div class="waves-effect waves-light btn-large center-block"><a class="white-text" href="#">iPhone</a></div>
-						<div class="waves-effect waves-light btn-large center-block right"><a class="white-text" href="#">andoroid</a></div>
+						<div class="waves-effect waves-light btn-large center-block green accent-4"><a class="white-text" href="#">iPhone</a></div>
+						<div class="waves-effect waves-light btn-large center-block green accent-4 right"><a class="white-text" href="#">andoroid</a></div>
 					</div>
 				</div>
 			</div>
