--- a/order.html
+++ b/order.html
@@ -36,7 +36,7 @@
 			<form action="">
 				<textarea name="" id="" cols="30" rows="10"></textarea>
 			</form>
-			<input class="waves-effect waves-light btn-large" type="submit" value="送信">
+			<input class="waves-effect waves-light btn-large green accent-4" type="submit" value="送信">
 			<h3>掃除を頼む</h3>
 			<h4>時間</h4>
 			<form action="">
@@ -46,7 +46,7 @@
 			<form action="">
 				<textarea name="" id="" cols="30" rows="10"></textarea>
 			</form>
-			<input class="waves-effect waves-light btn-large" type="submit" value="送信">
+			<input class="waves-effect waves-light btn-large green accent-4" type="submit" value="送信">
 			<h3>洗濯を頼む</h3>
 			<h4>時間</h4>
 			<form action="">
@@ -56,7 +56,7 @@
 			<form action="">
 				<textarea name="" id="" cols="30" rows="10"></textarea>
 			</form>
-			<input class="waves-effect waves-light btn-large" type="submit" value="送信">
+			<input class="waves-effect waves-light btn-large green accent-4" type="submit" value="送信">
 			<h3>その他</h3>
 			<h4>時間</h4>
 			<form action="">
@@ -66,7 +66,7 @@
 			<form action="">
 				<textarea name="" id="" cols="30" rows="10"></textarea>
 			</form>
-			<input class="waves-effect waves-light btn-large" type="submit" value="送信">
+			<input class="waves-effect waves-light btn-large green accent-4" type="submit" value="送信">
 		</div>
 	</main>
 	<footer class="page-footer deep-orange lighten-2">
